--- a/note-manager/src/main/resources/org/manager/note/main.fxml
+++ b/note-manager/src/main/resources/org/manager/note/main.fxml
@@ -9,6 +9,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
+                <MenuItem mnemonicParsing="false" text="Open" onAction="#openFile" />
                 <MenuItem mnemonicParsing="false" text="New Tab" onAction="#addNewTab" />
               <MenuItem mnemonicParsing="false" text="Close" />
             </items>
